[gd_scene load_steps=8 format=3 uid="uid://d3ymaghq6gyyb"]

[ext_resource type="Script" uid="uid://dd4h1vu5jbnib" path="res://scripts/basic_bird.gd" id="1_ig2ws"]
[ext_resource type="Texture2D" uid="uid://cruhep0hp14tp" path="res://art/koifishy_palooza_12.png" id="2_377tr"]
[ext_resource type="Script" uid="uid://b2h7834uq2o77" path="res://scripts/movement.gd" id="3_2tnl4"]
[ext_resource type="AudioStream" uid="uid://ohenvpn0rtrp" path="res://art/water-splash-199583.mp3" id="4_pgp1q"]

[sub_resource type="Curve" id="Curve_ib66m"]
_limits = [0.0, 20.0, 0.0, 1.0]
bake_resolution = 200
_data = [Vector2(0, 20), 0.0, 0.0, 0, 0, Vector2(0.19837, 5.90526), -27.9766, -27.9766, 0, 0, Vector2(0.997283, 0.27), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_377tr"]
curve = SubResource("Curve_ib66m")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_x6n5f"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 20.0
initial_velocity_max = 80.0
gravity = Vector3(0, 150, 0)
scale_min = 20.0
scale_max = 30.0
scale_over_velocity_curve = SubResource("CurveTexture_377tr")
color = Color(0.898039, 1, 1, 0.72549)

[node name="koi_fish" type="Node2D"]
top_level = true
light_mask = 2
visibility_layer = 2
position = Vector2(477, 220)
scale = Vector2(4.2, 4.2)
script = ExtResource("1_ig2ws")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_377tr")
hframes = 3
vframes = 4

[node name="movement" type="Node2D" parent="."]
script = ExtResource("3_2tnl4")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(-0.333336, -0.333333)
emitting = false
amount = 30
lifetime = 0.6
one_shot = true
explosiveness = 0.6
randomness = 0.45
trail_enabled = true
trail_sections = 4
trail_section_subdivisions = 2
process_material = SubResource("ParticleProcessMaterial_x6n5f")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_pgp1q")
volume_db = -5.0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(0, -0.238095)
polygon = PackedVector2Array(-5.95238, -13.3333, -1.66666, -19.7619, 2.85715, -19.7619, 6.42857, -13.3333, 6.66667, -10.4762, 12.381, -3.80952, 11.6667, 0, 7.85715, -2.61905, 5.71429, -1.66667, 2.85715, 9.04762, 11.4286, 20, 6.90476, 20.2381, 1.42857, 15.7143, -5.2381, 20.2381, -10.9524, 20.4762, -2.38095, 10.9524, -5, -2.14286, -6.90476, -2.85714, -10.2381, 0.476189, -11.1905, -3.57143, -5.71429, -10)

[node name="sprint_timer" type="Timer" parent="."]
wait_time = 0.55

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="sprint_timer" to="." method="_on_sprint_timer_timeout"]
